syntax = "proto3";

option csharp_namespace = "Server";

package authentication;

// The greeting service definition.
service Authentication {
  // Sends a greeting
  rpc Authenticate (AuthenticationRequest) returns (AuthenticationResponse);
}
 


// The request message containing the user's name.
message AuthenticationRequest {
  string Username = 1;
  string password = 2;
}

// The response message containing the greetings.
message AuthenticationResponse {
  string AccessToken = 1;
  int32 ExpiresIn = 2;
}
