syntax = "proto3";

option csharp_namespace = "Server";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayGreetings (HelloRequest) returns (HelloReply);
  rpc RequestAllData(DataRequest) returns (stream Data);
}

message DataRequest{
	string request =1;
  
}


message Data {
  string Name = 1;
  
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}